# irc-servant

./: Main.hs  README.org  cabal.config  irc-bot.cabal  irc-servant.cabal
