name:                irc-servant
version:             0.1.0.0
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable irc-servant
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       unix,
                       containers,
                       mtl,
                       bytestring,
                       network,
                       random,
                       irc,
                       process,
                       transformers,
                       lens
  default-language:    Haskell2010